[package]
name = "clickhouseclient-rust-bench"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clickhouse = { version = "0.15.1", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
